Add final touches

--- a/DotNet/CHANGELOG.txt
+++ b/DotNet/CHANGELOG.txt
@@ -1,4 +1,4 @@
 Release Notes BankId.Merchant.Library
 	
-v 1.0
+v 1.0.0 (migration made using "iDIN-libraries-dotnet" .Net Framework library v1.2.2 as a starting point)
 #121312 Create iDIN .NET Core Software Library
